# PadelApp

./: .gitignore  API_ENDPOINTS.md  DATABASE_DIAGRAM.md  FRONTEND_DEPLOYMENT_FIX.md  MIGRATION_FIX_GUIDE.md  PRD_Game_Management_Enhancement.md  PROJECT_OVERVIEW.md  README.md  create_test_tournament.py  package-lock.json  package.json  pnpm-lock.yaml  populate_tournament_and_leaderboard.py  test.db  test_api_flow.py  test_deployment_readiness.py  test_small_batch.py  test_two_player_team.py  update_tournament_categories.py
padel-app/apps/api/: .gitignore  .ruff.toml  Dockerfile  ELO_RANGE_FIX_README.md  LINTING.md  README.md  alembic.ini  check_token_status.py  debug_game.py  debug_game_enhanced.py  debug_specific_token.py  debug_summary.py  entrypoint.sh  package.json  pyproject.toml  run_token_test.py  safer_invitation_crud.py  test.db  test_api_endpoint.py  test_api_routes.py  test_curl_simple.py  test_db_debug.py  test_db_query.py  test_elo_fix.py  test_expiration.py  test_game_simple.py  test_invitation_api.py  test_invitation_creation.py  test_invitation_endpoint.py  test_invitation_endpoint.sh  test_invitation_info.py  test_score_fix.py  test_token_lookup.py  validate_elo_ranges.py
padel-app/apps/api/app/: database.py  main.py
padel-app/apps/api/app/core/: config.py  dependencies.py  security.py
padel-app/apps/api/app/crud/: __init__.py  booking_crud.py  business_crud.py  club_admin_crud.py  club_crud.py  court_crud.py  elo_adjustment_request_crud.py  game_crud.py  game_history_crud.py  game_invitation_crud.py  game_player_crud.py  game_score_crud.py  leaderboard_crud.py  onboarding_crud.py  recurring_tournament_crud.py  team_crud.py  tournament_crud.py  user_crud.py
padel-app/apps/api/app/middleware/: auth.py
padel-app/apps/api/app/models/: __init__.py  booking.py  club.py  club_admin.py  club_daily_analytics.py  club_membership.py  court.py  elo_adjustment_request.py  game.py  game_invitation.py  game_player.py  game_score.py  notification.py  payment_transaction.py  preferred_position.py  revenue_record.py  team.py  team_membership.py  team_stats.py  tournament.py  user.py  (+1 more)
padel-app/apps/api/migrations/: env.py  script.py.mako
padel-app/apps/api/tests/: conftest.py  test_elo_rating_service.py  test_game_schemas.py  test_games_api.py  test_leaderboard_api.py  test_user_club_schema.py  test_users_api.py
(+379 files in other folders)
