[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for PadelGo"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.7",
    "alembic>=1.11",
    "pydantic-settings>=2.0",
    "gunicorn>=21.2.0",
    "email-validator>=2.0.0",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"] 